--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,8 @@
     --grey:#66707f;
 }
 
-.p { text-align: justify;
+.p {
+  text-align: justify;
   text-justify: inter-word;}
 
 [class^="row"] [class^="col"] { background-color: rgba(0, 0, 0, 0.1); }} /* just for testing; remove*/
