--- a/css/custom.css
+++ b/css/custom.css
@@ -24,6 +24,11 @@ width:80%
 height:auto
 }
 
+#secondaryreview-img > img {
+width:70%;
+height:auto
+}
+
 /*navigation*/
 
 h2 {
@@ -36,9 +41,6 @@ h3 {
 color: #01214c;
 font-weight: bolder;
 font-style: italic;
-}
-
-#recent-info > h3 {
 font-size: 2rem;
 }
 
