--- a/css/custom.css
+++ b/css/custom.css
@@ -8,11 +8,11 @@
 /*navigation*/
 
 nav {
-background-color: #dae6ec
+background-color: var(--lightblue)
 }
 
 #nav a {
-color: #264582
+color: var(--blue)
 }
 
 #navbarDropdown > img {
@@ -32,14 +32,14 @@ height:auto
 /*text formatting*/
 
 h2 {
-color: #01214c;
+color: var(--navyblue);
 font-weight: bolder;
 font-size: 2.5rem;
 line-height: 1;
 }
 
 h3 {
-color: #01214c;
+color: var(--navyblue);
 font-weight: bolder;
 font-style: italic;
 font-size: 1.9rem;
@@ -54,7 +54,7 @@ line-height: 1.1;
 
 .artist-name {
 font-weight: bold;
-color: #66707f;
+color: var(--grey);
 font-size: 1.5rem;
 text-align: justify;
 text-justify: inter-word;
@@ -67,7 +67,7 @@ line-height: 0;
 }
 
 .release-date {
-color: #66707f;
+color: var(--grey);
 text-align: justify;
 text-justify: inter-word;
 line-height: 1;
